# tensorevo

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yaml
models/in/: individual0.json
src/: activation.rs  component.rs  cost_function.rs  dimension.rs  evolution.rs  individual.rs  layer.rs  lib.rs  ops.rs  population.rs  species.rs  tensor.rs  tensor_impl.rs  utils.rs  world.rs
src/evolution/: crossover.rs  init.rs  mutation.rs  procreation.rs  selection.rs  speciation.rs
src/ops/: dot.rs  exp.rs  norm.rs  pow.rs
src/utils/: registered.rs  registry.rs
tests/: test_sgd.rs
