[package]
name = "tensorevo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
env_logger = "*"
ndarray = { version = "0.15.6", features = ["serde"] }
num-traits = "*"
log = "*"
ordered-float = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tempfile = "*"
thiserror = "*"

[lints.clippy]
needless_return = "allow"
