[package]
name = "tensorevo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
env_logger = "*"
generic_singleton = "*"
log = "*"
ndarray = { version = "0.15.6", features = ["serde"] }
num-traits = "*"
ordered-float = "*"
rand = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tempfile = "*"
thiserror = "*"
uuid = { version = "*", features = ["v4", "fast-rng"] }

[dev-dependencies]
mocktopus = "*"

[lints.clippy]
needless_return = "allow"
